# BlindEngine

./: .gitmodules  CMakeLists.txt  README.md  build.bat  cmake-generate.bat
lib/blindgui/: CMakeLists.txt
lib/blindgui/include/blindgui/: parser.h
src/: be_assert.h  blindengine.h  main.c
src/application/: application.c  application.h
src/components/: camera.c  camera.h  component_list.h
src/components/transform/: transform.c  transform.h
src/ecs/: component.c  component.h  entity.c  entity.h  system.c  system.h  system_function_pointer.h  system_registry.c  system_registry.h  systems_run.c  systems_run.h
src/engine/: engine.c  engine.h
src/engine_api/: api.c
src/event/: event.c  event.h
src/font/: Font.c  Font.h
src/layer/: layer.h
src/list/: list.c  list.h
src/logger/: logger.c  logger.h
src/renderer/: frame.h  gpu_id.h  renderer.c  renderer.h  rendererSystem.c  rendererSystem.h
src/renderer/model/: mesh.h  model.c  model.h  triangle.h  vertex.h
src/renderer/model/buffers/: GLBuffer.c  GLBuffer.h
src/renderer/model/surface/: shader.c  shader.h  surface.h
src/sparse_set/: sparse_set.c  sparse_set.h
src/systems/testsystem/: testsystem.c  testsystem.h
src/window/: window.c  window.h
